@@ -3,6 +3,7 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
 v6.0.4 Nov 21 2014 (Beta 3.9.1)
+. (kfsone) Added "sell" command (find places to sell a specific item)
 . (kfsone) Reactive Armor changed to Reactive Armour
 . (kfsone) Added 'Chemical Waste'
 . (kfsone) Update GUI now consistently selects text on entering a cell
